fix: gallery alignment when in article

--- a/source/assets/styles/base.scss
+++ b/source/assets/styles/base.scss
@@ -98,8 +98,8 @@
 :where(article > header){
     width: 100%;
     max-width: calc( var(--max-section-width) - var(--pad) * 2 );
-    margin-left: auto;
-    margin-right: auto;
+    // margin-left: auto;
+    // margin-right: auto;
 }
 
 
