--- a/source/assets/styles/gallery.scss
+++ b/source/assets/styles/gallery.scss
@@ -87,7 +87,7 @@
         display: grid;
 
         width: 100%;
-        max-width:100vw;
+        // max-width:100vw;
         
         box-sizing: border-box;
 
